# AdventOfCode

./: .hgignore  AdventOfCode.cabal  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day14.hs  Day15.hs  Day16.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  advent.cabal  adventofcode.cabal
2019/: CHANGELOG.md  Day1.hs  Day4.hs  Day5.hs
2021/: Day1.hs  Day13.hs  Day14.hs  Day2.hs  Day3.hs  Day4.hs  Day9.hs
2022/: Day1.hs  Day3.hs  Day5.hs  adventofcode.cabal
