cabal-version:      3.0
name:               AdventOfCode
version:            0.1.0.0
-- synopsis:
-- description:

license:            GPL-3.0-only
license-file:       LICENSE
author:             Merijn Verstraaten
maintainer:         merijn@inconsistent.nl
copyright:          Copyright © 2025 Merijn Verstraaten
category:           AdventOfCode
build-type:         Simple

common all
  default-language:     Haskell2010
  ghc-options:          -rtsopts -Wall -fdefer-typed-holes -Wno-unused-do-bind
                        -Wno-typed-holes

  build-depends:        base ^>= 4.20.2.0
               ,        containers ^>= 0.7
               ,        text ^>= 2.1.3

executable Day1
    import:           all
    main-is:          Day1.hs
    hs-source-dirs:   .
