cabal-version:       2.4
name:                advent
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             GPL-3.0-only
license-file:        LICENSE
author:              Merijn Verstraaten
maintainer:          merijn@inconsistent.nl
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

common all
  default-language:     Haskell2010
  ghc-options:          -Wall

  build-depends:        base ^>= 4.12.0.0,
                        text ^>= 1.2.4.0

executable Day1
  import:               all
  main-is:              Day1.hs

executable Day2
  import:               all
  main-is:              Day2.hs
  build-depends:        vector ^>= 0.12.0.3
