cabal-version:      2.4
name:               adventofcode
version:            0.1.0.0
-- synopsis:
-- description:

homepage:           
bug-reports:        

author:             Merijn Verstraaten
maintainer:         merijn@inconsistent.nl
copyright:          Copyright © 2021 Merijn Verstraaten
license:            GPL-3.0-only
license-file:       LICENSE

category:           AdventOfCode

common all
  default-language:     Haskell2010
  ghc-options:          -rtsopts -Wall -fdefer-typed-holes -Wno-unused-do-bind
                        -Wno-typed-holes

  build-depends:        base ^>= 4.14.0.0
               ,        containers ^>= 0.6.4.1
               ,        text ^>= 1.2.3.2
executable Day1
  import:               all
  main-is:              Day1.hs

executable Day2
  import:               all
  main-is:              Day2.hs
  build-depends:        megaparsec ^>= 9.2.0

executable Day3
  import:               all
  main-is:              Day3.hs
  build-depends:        megaparsec ^>= 9.2.0
               ,        vector ^>= 0.12.3.1

executable Day4
  import:               all
  main-is:              Day4.hs
  build-depends:        megaparsec ^>= 9.2.0
               ,        vector ^>= 0.12.3.1

executable Day5
  import:               all
  main-is:              Day5.hs
  build-depends:        megaparsec ^>= 9.2.0

executable Day6
  import:               all
  main-is:              Day6.hs
  build-depends:        megaparsec ^>= 9.2.0
               ,        vector ^>= 0.12.3.1

executable Day7
  import:               all
  main-is:              Day7.hs
  build-depends:        megaparsec ^>= 9.2.0
               ,        vector ^>= 0.12.3.1

executable Day8
  import:               all
  main-is:              Day8.hs
  build-depends:        megaparsec ^>= 9.2.0

executable Day9
  import:               all
  main-is:              Day9.hs
  build-depends:        megaparsec ^>= 9.2.0

executable Day10
  import:               all
  main-is:              Day10.hs
  build-depends:        megaparsec ^>= 9.2.0

executable Day11
  import:               all
  main-is:              Day11.hs
  build-depends:        megaparsec ^>= 9.2.0

executable Day12
  import:               all
  main-is:              Day12.hs
  build-depends:        megaparsec ^>= 9.2.0

executable Day13
  import:               all
  main-is:              Day13.hs
  build-depends:        megaparsec ^>= 9.2.0
